samples/_failures_safe/1761411462_67b2df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29d3e312.c: In function ‘main’:
./samples/SAFE/__tmp_29d3e312.c:141:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  141 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_29d3e312.c:141:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_29d3e312.c:141:10: error: expected ‘;’ at end of input
  141 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_29d3e312.c:141:5: error: expected declaration or statement at end of input
  141 |     print
      |     ^~~~~
